Correction Main/Support Quotes
