# api/out/DebatIDOAPI-python-flask/DebatIDOAPI/controllers/database_controller.py
@@ -3,6 +3,7 @@ import six
 
 from DebatIDOAPI.models.error import Error  # noqa: E501
 from DebatIDOAPI.models.quote import Quote  # noqa: E501
+from DebatIDOAPI.models.quote_link import QuoteLink  # noqa: E501
 from DebatIDOAPI.models.theme import Theme  # noqa: E501
 from DebatIDOAPI.models.reference import Reference  # noqa: E501
 from DebatIDOAPI.models.protagonist import Protagonist  # noqa: E501
@@ -30,22 +31,26 @@ classNames = {
 classSQLRequests = {
     Quote : {
         "List" : "SELECT q.id, q.title, q.details, q.typeID, qt.title as typeTitle, q.dateUpdate FROM quote q JOIN quoteType qt ON q.typeID = qt.id;",
-        "ID" : "SELECT q.id, q.title, q.details, q.typeID, qt.title, q.dateUpdate FROM quote q JOIN quoteType qt ON q.typeID = qt.id WHERE q.id = ",
+        "ID" : "SELECT q.id, q.title, q.details, q.typeID, qt.title as typeTitle, q.dateUpdate FROM quote q JOIN quoteType qt ON q.typeID = qt.id WHERE q.id = ",
         "DELETE" : "DELETE FROM quote q WHERE q.id = ",
         "quoteMains" : "SELECT q.id, q.title, q.details, q.typeID, qt.title as typeTitle, q.dateUpdate FROM quote q JOIN quoteType qt ON q.typeID JOIN quoteLink ql ON ql.quoteMainID = q.id WHERE ql.quoteSupportID = ",
-        "quoteSupports" : "SELECT q.id, q.title, q.details, q.typeID, qt.title as typeTitle, q.dateUpdate FROM quote q JOIN quoteType qt ON q.typeID JOIN quoteLink ql ON ql.quoteSupportID = q.id WHERE ql.quoteMainID = "
+        "quoteSupports" : "SELECT q.id, q.title, q.details, q.typeID, qt.title as typeTitle, q.dateUpdate FROM quote q JOIN quoteType qt ON q.typeID JOIN quoteLink ql ON ql.quoteSupportID = q.id WHERE ql.quoteMainID = ",
+    },
+    QuoteLink : {
+        "quoteMains" : "SELECT ql.quoteMainID, ql.quoteSupportID, ql.typeID, qlt.title as typeTitle, ql.dateUpdate FROM quoteLink ql JOIN quoteLinkType qlt ON ql.typeID = qlt.id WHERE ql.quoteSupportID = ",
+        "quoteSupports" : "SELECT ql.quoteMainID, ql.quoteSupportID, ql.typeID, qlt.title as typeTitle, ql.dateUpdate FROM quoteLink ql JOIN quoteLinkType qlt ON ql.typeID = qlt.id WHERE ql.quoteMainID = ",
     },
     Reference : {
         "List" : "SELECT r.id, r.title, r.details, r.url, r.date, r.typeID, rt.title as typeTitle, r.reliability, r.dateUpdate FROM reference r JOIN referenceType rt ON r.typeID = rt.id;",
-        "ID" : "SELECT r.id, r.title, r.details, r.url, r.date, r.typeID, rt.title, r.reliability, r.dateUpdate FROM reference r JOIN referenceType rt ON r.typeID = rt.id WHERE r.id =",
+        "ID" : "SELECT r.id, r.title, r.details, r.url, r.date, r.typeID, rt.title as typeTitle, r.reliability, r.dateUpdate FROM reference r JOIN referenceType rt ON r.typeID = rt.id WHERE r.id =",
         "DELETE" : "DELETE FROM reference r WHERE r.id = ",
         Quote : "SELECT r.id, r.title, r.details, r.url, r.date, r.typeID, rt.title, r.reliability, r.dateUpdate FROM reference r JOIN quoteReference qr ON r.id = qr.referenceID JOIN referenceType rt ON r.typeID = rt.id WHERE qr.quoteID = "
     },
     Theme : {
-        "List" : "SELECT t.id, t.title as title FROM theme t;",
-        "ID" : "SELECT t.id, t.title as title FROM theme t WHERE t.id = ",
+        "List" : "SELECT t.id, t.title FROM theme t;",
+        "ID" : "SELECT t.id, t.title FROM theme t WHERE t.id = ",
         "DELETE" : "DELETE FROM theme t WHERE t.id = ",
-        Quote : "SELECT t.id, t.title as title FROM theme t JOIN quoteTheme qt ON t.id = qt.themeID WHERE qt.quoteID = "
+        Quote : "SELECT t.id, t.title FROM theme t JOIN quoteTheme qt ON t.id = qt.themeID WHERE qt.quoteID = "
     },
     Protagonist : {
         "List" : "SELECT p.id, p.type, p.name, p.link, p.photo, p.dateUpdate FROM protagonist p;",
@@ -66,8 +71,6 @@ classSQLRequests = {
         "DELETE" : "DELETE FROM company c WHERE c.id = ",
         Protagonist : "SELECT c.id, c.siret, c.dateUpdate FROM protagonist pr JOIN company c ON pr.id = c.id WHERE pr.id = "
     }
-
-
 }
 
 class Database:
@@ -114,6 +117,13 @@ class Database:
         return myObject
 
     @classmethod
+    def getObjectFromIDWithDetailsFromOtherClassParameters(cls, classMyObject, id):
+        myObject = Database.getObjectFromID(classMyObject,id)
+        Database.getDetailsFromOtherClassParameters(myObject)
+        return myObject
+
+
+    @classmethod
     def getList(cls, classMyObject):
         list = []
         if ("List" in classSQLRequests[classMyObject]):
@@ -124,6 +134,15 @@ class Database:
         return list
 
     @classmethod
+    def getListWithDetailsFromOtherClassParameters(cls, classMyObject):
+        list = Database.getList(classMyObject)
+        for l in list :
+            Database.getDetailsFromOtherClassParameters(l)
+        return list
+
+
+
+    @classmethod
     def getListFromOtherID(cls, classMyObject, classConstraintID, id):
         list = []
         if (classConstraintID in classSQLRequests[classMyObject]):
@@ -132,6 +151,13 @@ class Database:
             cur.execute(classSQLRequests[classMyObject][classConstraintID]+str(id)+";")
             for row in cur.fetchall() :
                 list.append(classMyObject.from_dict(row))
+        return list
+
+    @classmethod
+    def getListFromOtherIDWithDetailsFromOtherClassParameters(cls, classMyObject, classConstraintID, id):
+        list = Database.getListFromOtherID(classMyObject, classConstraintID, id)
+        for l in list :
+            Database.getDetailsFromOtherClassParameters(l)
         return list
 
     @classmethod
@@ -152,6 +178,9 @@ class Database:
                     myObject.person = Database.getObjectFromOtherID(Person,Protagonist,myObject.id)
                 elif (myObject.type == "person"):
                     myObject.company = Database.getObjectFromOtherID(Company,Protagonist,myObject.id)
+            elif (type(myObject) is QuoteLink):
+                myObject.quote_main = Database.getObjectFromID(Quote,myObject.quote_main_id)
+                myObject.quote_support = Database.getObjectFromID(Quote,myObject.quote_support_id)
             elif (type(myObject) is Quote):
                 dictSubClasses = Database.getOtherClassParameters(myObject)
                 for objectName, subClassObject in dictSubClasses.items():
